...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dwt-zv-kqD">
                                        <rect key="frame" x="0.0" y="420" width="414" height="398"/>
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="CsC-1P-FjT">
                                                <rect key="frame" x="0.0" y="0.0" width="414" height="398"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g4f-UE-CEj">
                                                        <rect key="frame" x="18" y="8" width="378" height="45"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="45" id="fAn-tJ-W4P">
                                                                <variation key="heightClass=regular-widthClass=regular" constant="60"/>
                                                            </constraint>
                                                        </constraints>
...
                                                                <variation key="heightClass=regular-widthClass=regular">
                                                                    <nil key="textColor"/>
                                                                </variation>
                                                            </label>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mI1-dy-DwB">
                                                                <rect key="frame" x="141" y="0.0" width="237" height="30"/>
                                                                <state key="normal" title="Sign Up">
                                                                    <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                </state>
                                                            </button>
                                                        </subviews>
                                                    </stackView>
                                                </subviews>
...
                                            </switch>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cBZ-3R-Wbf">
                                        <rect key="frame" x="0.0" y="246" width="312.66666666666669" height="30"/>
                                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Register">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <segue destination="KON-2S-pqY" kind="presentation" id="2e6-JR-Pmi"/>
                                        </connections>
                                    </button>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="sectionIndexColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Enter Artist To Search" showsCancelButton="YES" showsScopeBar="YES" id="Nth-xv-Fa4">
                            <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <textInputTraits key="textInputTraits"/>
                            <scopeButtonTitles>
                                <string>Music</string>
                                <string>Videos</string>
                            </scopeButtonTitles>
                        </searchBar>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="119" id="gwG-cE-Aqf" customClass="TableCell" customModule="realwork" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="84" width="414" height="119"/>
                                <autoresizingMask key="autoresizingMask"/>
...
