...
    func addSongToPlaylist(playlistName: String, songIndex: Int) {
        self.searchSongsViewModel.addSongToPlaylist(playlistName: playlistName, songIndex: songIndex)
    }

    func importantAction(at indexPath: IndexPath, then tableView: UITableView) -> UIContextualAction {
        let cell = tableView.cellForRow(at: indexPath) as? TableCell
        let description: String = cell?.tblcellplayer != nil && cell!.isPlaying() ? "PAUSE" : "PLAY"
        let action = UIContextualAction(style: .normal, title: description) { ( _, _, completion) in
            let url  = URL.init(string: self.listOfArtistCollections[indexPath.row].previewUrl)
            let playerItem: AVPlayerItem = AVPlayerItem(url: url!)
            if self.player == nil {
                self.player = AVPlayer(playerItem: playerItem)
            }
...
