...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EG6-VN-7CF">
                                <rect key="frame" x="0.0" y="98" width="414" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AiR-hH-pxX" customClass="ButtonPrimaryTintShadonw" customModule="realwork" customModuleProvider="target">
                                        <rect key="frame" x="344" y="12" width="45" height="36.666666666666671"/>
                                        <accessibility key="accessibilityConfiguration" identifier="dashboardToProfile"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="A6Y-QU-1kO"/>
                                            <constraint firstAttribute="width" constant="45" id="dIB-v3-Tdb"/>
                                        </constraints>
                                        <color key="tintColor" red="0.90980392156862744" green="0.85098039215686272" blue="0.0078431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" backgroundImage="person.fill" catalog="system">
...
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="YXz-Lt-dtH">
                                        <rect key="frame" x="10" y="55.333333333333378" width="344" height="114.66666666666669"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xJ8-BZ-nbH">
                                                <rect key="frame" x="157" y="0.0" width="30" height="38.333333333333336"/>
                                                <accessibility key="accessibilityConfiguration" identifier="recentButtonFirst"/>
                                                <state key="normal">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="selectedRecentSong:" destination="luS-JL-aU6" eventType="touchUpInside" id="ev5-M1-m6G"/>
                                                </connections>
...
                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="GRA-Hr-T77">
                                                <rect key="frame" x="0.0" y="0.0" width="324" height="140"/>
                                                <subviews>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kzp-T3-Tkc" customClass="ReusableTrendingTile" customModule="realwork" customModuleProvider="target">
                                                        <rect key="frame" x="0.0" y="0.0" width="152" height="140"/>
                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="FirstTrendingTile"/>
                                                    </view>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M6p-80-eDm" customClass="ReusableTrendingTile" customModule="realwork" customModuleProvider="target">
                                                        <rect key="frame" x="172" y="0.0" width="152" height="140"/>
                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                    </view>
                                                </subviews>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2WS-hO-Q2O" customClass="ButtonPrimaryTint" customModule="realwork" customModuleProvider="target">
                                <rect key="frame" x="324" y="16" width="40" height="38.666666666666671"/>
                                <accessibility key="accessibilityConfiguration" identifier="playPauseButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="Ij6-Ts-jSw"/>
                                    <constraint firstAttribute="height" constant="40" id="fNP-Mn-5hB"/>
                                </constraints>
                                <color key="tintColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" backgroundImage="stop.circle.fill" catalog="system">
...
