...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YhN-qf-CTb">
                                        <rect key="frame" x="0.0" y="381" width="414" height="361"/>
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Is4-Yi-tfz">
                                                <rect key="frame" x="0.0" y="0.0" width="414" height="361"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UyS-Nv-gNy">
                                                        <rect key="frame" x="18" y="8" width="378" height="45"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="45" id="N6v-aK-rta">
                                                                <variation key="heightClass=regular-widthClass=regular" constant="60"/>
                                                            </constraint>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rn6-sF-P8C">
                                                        <rect key="frame" x="18" y="69.5" width="378" height="45"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="45" id="xzz-Lo-KFJ">
                                                                <variation key="heightClass=regular-widthClass=regular" constant="60"/>
                                                            </constraint>
                                                        </constraints>
...
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="45" id="fNM-Aw-UeR">
                                                                <variation key="heightClass=regular-widthClass=regular" constant="70"/>
                                                            </constraint>
                                                        </constraints>
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <state key="normal" title="Login"/>
                                                        <connections>
                                                            <action selector="loginButtonAction:" destination="fXp-wc-phK" eventType="touchUpInside" id="N8i-z4-tO2"/>
                                                        </connections>
                                                    </button>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or Login with:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ix0-Xn-zGa">
                                                        <rect key="frame" x="18" y="205" width="378" height="20.5"/>
...
